[package]
name = "transform"
version = "0.1.0"
edition = "2021"

[lib]
name = "transform"
path = "src/lib.rs"

[[bin]]
name = "transform"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
lazy_static='*'
regex='*'
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
